--- a/index.html
+++ b/index.html
@@ -69,10 +69,18 @@
 
         <footer>
           <p>
-            Created <i class="fa fa-heart"></i> by
-            <a target="_blank" href="https://florin-pop.com">Hafiz Sakib</a>
-            Contact Me:
-            <a target="_blank" href="https://github.com/Hafiz-Sakib">here</a>.
+            Helped <i class="fa fa-heart"></i> by
+            <a
+              target="_blank"
+              href="https://www.youtube.com/watch?v=mUdo6w87rh4&t=1124s"
+              >Travesy Media</a
+            >
+            Watch Tutorial:
+            <a
+              target="_blank"
+              href="https://www.youtube.com/watch?v=mUdo6w87rh4&t=1124s"
+              >here</a
+            >.
           </p>
         </footer>
       </main>
